src/components/Header/Header.css
.header {
  display: flex;
  align-items: center;
  padding: 32px 0 28px;
  font-family:
    Cabinet Grotesk,
    Arial,
    sans-serif;
}

.header__logo {
  margin-right: 60px;
}

.header__date-and-location {
  margin: 0;
  font-family:
    Cabinet Grotesk,
    Arial,
    sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  
}

.header__add-clothes-btn {
  margin: 0 20px 0 auto;
  font-family:
    Cabinet Grotesk,
    Arial,
    sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  letter-spacing: 0%;
  outline: none;
  border: none;
  background: none;
}

.header__user-container {
  display: flex;
  align-items: center;
  gap: 12px;
}

.header__username {
  margin: 0;
  font-family:
    Cabinet Grotesk,
    Arial,
    sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 100%;
  letter-spacing: 0%;
}

.header__controls {
  margin-left: auto;
  margin-right: 130px; 
  display: flex;
  align-items: center;
  gap: 20px;
}

.header__add-clothes-btn {
  margin: 0;
}

.header__avatar {
  margin-left: 12px;
  flex: 0 0 40px;
  height: 40px;
  border-radius: 50%;
  object-fit: cover;
  display: block;
}

.header__nav-link {
  color: black;
  text-decoration: none;
}

.header__register-btn {
  border: none;
  background: transparent;
  font-family: Cabinet Grotesk;
  font-weight: 700;
  font-style: Bold;
  font-size: 20px;
  line-height: 24px;
  letter-spacing: 0%;
}

.header__login-btn {
  border: none;
  background: transparent;
  font-weight: 700;
  font-style: Bold;
  font-size: 20px;
  line-height: 24px;
  letter-spacing: 0%;
}

